Fix: webshop description pre wrap

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -30,6 +30,15 @@
 .style-huge-title-1 {
     font-size: 38px;
     font-weight: 600;
+    line-height: 1.3;
+
+    @media (max-width: 500px) {
+        font-size: 30px;
+    }
+
+    @media (max-width: 400px) {
+        font-size: 25px;
+    }
 }
 
 .style-title-1 {
